<resources>
    <string name="app_name">Vocab Virtuoso</string>
    <string name="parse_app_id">XimUXacfO1L35WzJOnJR17ca2yxjWR4FelhAiMRh</string>
    <string name="parse_client_key">2I97SZPqwxVz2oIqbP0UB7sGb5jqENIxDDfAXUZa</string>
    <string name="facebook_app_id">379196335613532</string>
    <string name="fb_button">Log in with Facebook</string>
    <string name="progress">Overall progress</string>
    <string name="deckName">Deck Name</string>
    <string name="seen">Seen</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="myaccount">My Account</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="studyDecks">Study Decks</string>
    <string name="friends">Friends</string>
    <string name="rewards">Rewards</string>
    <string name="duelMode">Duel Mode</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="push">Push Notifications</string>
    <string name="enable">Enable/Disable Push Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="namePreference">Name (click for change)</string>
    <string name="emailPreference">Email (click for change)</string>
    <string name="basicInfo">Basic Info</string>
    <string name="namePref">Name</string>
    <string name="emailPref">Email</string>
    <string name="tap">Tap to see answer</string>
    <string name="conf1">1\nNot at all</string>
    <string name="conf2">2</string>
    <string name="conf3">3</string>
    <string name="conf4">4</string>
    <string name="conf5">5\nPerfectly</string>
    <string name="intro">How well did you know this?</string>
    <string name="challenge">Challenge your friends!</string>
    <string name="duel">Duel mode lets you compete with your Facebook friends to enhance your study experience! Make sure your friends also installed Vocab Virtuoso. Then choose a set of vocabulary and set the time!</string>
    <string name="aboutText">Here, some information about the application and those responsible are being presented gradually.</string>
    <string name="dashboard">Dashboard</string>
    <string name="aboutUs">About Us</string>
    <string name="studying">Studying</string>
</resources>
